<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/cookie_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cookie_text"
        style="@style/cookie_text" />

    <ImageView
        android:id="@+id/cookie_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_of_cookie_desc"
        app:srcCompat="@drawable/ic_cookie_full" />
    <!--    app:srcCompat="@drawable/empty_dice"-->


    <TextView
        android:id="@+id/cookie_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/cookie_question"
        style="@style/cookie_question" />

    <Button
        android:id="@+id/cookie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/for_me"
        style="@style/cookie_button" />

</LinearLayout>