<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CookieSelectFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wood_background">

        <LinearLayout
            android:id="@+id/outerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cookie_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/advent_pro_thin"
                android:text="@string/cookie_text"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/cookie_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_of_cookie_desc"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_cookie_full" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@id/relativeView">

                    <TextView
                        android:id="@+id/cookie_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/alfa_slab_one"
                        android:text="@string/cookie_question"
                        android:textColor="@color/dark_brown"
                        android:textSize="40sp" />
                </RelativeLayout>


                <View
                    android:id="@+id/relativeView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_centerVertical="true" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/go_to_history"
                    android:focusable="true"
                    android:padding="0dp"
                    app:backgroundTint="#AA4400"
                    app:icon="@android:drawable/ic_menu_recent_history" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/relativeView"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/relativeViewTwo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cookie_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:gravity="center"
                        android:text="@string/for_me"
                        android:textSize="20sp"
                        android:visibility="gone"
                        app:cornerRadius="40dp"
                        app:elevation="4dp"
                        tools:ignore="TextContrastCheck" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignEnd="@id/relativeViewTwo">

                        <Button
                            android:id="@+id/cookie_eat_button"
                            style="@style/cookie_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/eat"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:visibility="visible"
                            tools:ignore="TextContrastCheck" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignStart="@id/relativeViewTwo">

                        <Button
                            android:id="@+id/cookie_dont_eat_button"
                            style="@style/cookie_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/don_t_eat"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:visibility="visible"
                            tools:ignore="TextContrastCheck" />
                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
